--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <h1>test</h1>
+    <div class="grid_container">
+        <button class="buttons" type="button" value="0"></button>
+        <button class="buttons" type="button" value="1"></button>
+        <button class="buttons" type="button" value="2"></button>
+        <button class="buttons" type="button" value="3"></button>
+        <button class="buttons" type="button" value="4" ></button>
+        <button class="buttons" type="button" value="5"></button>
+        <button class="buttons" type="button" value="6" ></button>
+        <button class="buttons" type="button" value="7"> </button>
+        <button class="buttons" type="button" value="8" ></button>
+    
+    </div>
+    <button class="play"> play</button>
      <script src="script.js"></script>
+     <script>
+     
+     </script>
 </body>
 </html>
