funcitionality is about to end

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="buttons" type="button" value="6" ></button>
         <button class="buttons" type="button" value="7"> </button>
         <button class="buttons" type="button" value="8" ></button>
+        <div class="winner_displayer"></div>
     
     </div>
     <button class="play"> play</button>
