9th logic is solved

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <button class="buttons" type="button" value="6" ></button>
         <button class="buttons" type="button" value="7"> </button>
         <button class="buttons" type="button" value="8" ></button>
-        <div class="winner_displayer"></div>
+        
     
+    </div>
+    <div class="winner_displayer">
+        <p class="text">WINNER IS </p>
+         <img class="img" src="istockphoto-490923810-612x612-removebg-preview.png" alt="cup">
+         <p class="winner_name"> player 1</p>
     </div>
     <button class="play"> play</button>
      <script src="script.js"></script>
