--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
          <p class="winner_name"> player 1</p>
     </div>
     <button class="play"> play</button>
+    <div class="inputs_container">
+        <input type="text">
+        <input type="text">
+    </div>
+  
      <script src="script.js"></script>
      <script>
      
