--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
              <img class="img" src="istockphoto-490923810-612x612-removebg-preview.png" alt="cup">
              <p class="winner_name"> player 1</p>
         </div>
-        <button class="play"> play</button>
+        <button class="play"> START</button>
+        <button class="play replay"> Replay</button>
+
         
             <input class="uni_in" type="text" placeholder="PLAYER 2">
             <input type="text" class="uni_in2" placeholder="PLAYER 1">
