--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="container">
         <div class="grid_container">
-            <button class="buttons" type="button" value="0"></button>
-            <button class="buttons" type="button" value="1"></button>
-            <button class="buttons" type="button" value="2"></button>
-            <button class="buttons" type="button" value="3"></button>
-            <button class="buttons" type="button" value="4" ></button>
-            <button class="buttons" type="button" value="5"></button>
-            <button class="buttons" type="button" value="6" ></button>
-            <button class="buttons" type="button" value="7"> </button>
-            <button class="buttons" type="button" value="8" ></button>
+            <button class="buttons" type="button" value="0">1</button>
+            <button class="buttons" type="button" value="1">2</button>
+            <button class="buttons" type="button" value="2">3</button>
+            <button class="buttons" type="button" value="3">4</button>
+            <button class="buttons" type="button" value="4" >5</button>
+            <button class="buttons" type="button" value="5">6</button>
+            <button class="buttons" type="button" value="6" >7</button>
+            <button class="buttons" type="button" value="7"> 8</button>
+            <button class="buttons" type="button" value="8" >9</button>
             
         
         </div>
